# geospatial-embeddings-urban-morphometrics-2

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  METRICS.md  PROBLEMS.md  README.md  REVIEW.md  SPECIFICATION.md  diagnose_metrics.py  pyproject.toml  run.py  skills-lock.json
tests/: test_aggregation.py  test_metric_config.py  test_oneway.py  test_registry.py  test_street_graph.py
urban_morphometrics/: __main__.py  cell_context.py  constants.py  height.py  main.py  metric_config.py  oneway.py  osm_loader.py  street_graph.py
urban_morphometrics/embedding/: README.md  config.py  evaluator.py  filters.py  run_experiment.py
urban_morphometrics/embedding/configs/: base.yaml  count_embedder_king_county.yaml  hex2vec_airbnb.yaml  hex2vec_chicago_crime.yaml  hex2vec_king_county.yaml  hex2vec_morpho_king_county.yaml  urban_morpho_embedder_king_county.yaml
urban_morphometrics/embedding/data/: dataset_factory.py  preparation.py
urban_morphometrics/embedding/embedders/: embedder_factory.py  pipeline.py  (+2 more)
urban_morphometrics/metrics/: __init__.py  _utils.py  aggregation.py  alignment.py  betweenness_centrality.py  building_adjacency.py  cds_length_total.py  cell_alignment.py  centroid_corner_distance.py  circular_compactness.py  closeness_centrality.py  clustering.py  compactness_weighted_axis.py  convexity.py  corners.py  courtyard_area.py  courtyard_index.py  courtyards.py  cyclomatic.py  degree.py  edge_node_ratio.py  elongation.py  equivalent_rectangular_index.py  facade_ratio.py  features.py  floor_area.py  form_factor.py  fractal_dimension.py  gamma.py  gamma_global.py  landuse_cover.py  longest_axis_length.py  mean_interbuilding_distance.py  mean_node_degree.py  mean_node_dist.py  meshedness.py  meshedness_global.py  nearest_street_distance.py  neighbor_distance.py  neighbors.py  (+14 more)
(+1 files in other folders)
