[project]
name = "urban-morphometrics"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "load-dotenv (>=0.1.0,<0.2.0)",
"momepy (>=0.11.0,<0.12.0)",
    "quackosm (>=0.17.0,<0.18.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "srai (>=0.10.2,<0.11.0)"
]


[project.scripts]
urban-morphometrics = "urban_morphometrics.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
