[project]
name = "urban-morphometrics"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "quackosm (>=0.17.0,<0.18.0)",
    "duckdb (==1.1.3)",
    "srai[all] (>=0.10.2,<0.11.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "momepy (>=0.11.0,<0.12.0)",
    "numba (>=0.64.0,<0.65.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "torch (==2.10.0)",
    "wandb (>=0.25.1,<0.26.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[project.scripts]
urban-morphometrics = "urban_morphometrics.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
